--- a/index.html
+++ b/index.html
@@ -17,14 +17,13 @@
 
 <script>
   // Your web app's Firebase configuration
-  var firebaseConfig = {
-    apiKey: "AIzaSyDWruNu2MpLPCU6tzxcRm79hKqT5IVBzB8",
-    authDomain: "multiplayer-racing-e2773.firebaseapp.com",
-    databaseURL: "https://multiplayer-racing-e2773-default-rtdb.firebaseio.com",
-    projectId: "multiplayer-racing-e2773",
-    storageBucket: "multiplayer-racing-e2773.appspot.com",
-    messagingSenderId: "695142558940",
-    appId: "1:695142558940:web:68ef57282cb65bed8c1819"
+  const firebaseConfig = {
+  apiKey: "AIzaSyDckXv7seqL1xcxaAE0xi8RH-bduVxj1MU",
+  authDomain: "testingsep-d4d10.firebaseapp.com",
+  projectId: "testingsep-d4d10",
+  storageBucket: "testingsep-d4d10.appspot.com",
+  messagingSenderId: "865678592270",
+  appId: "1:865678592270:web:8c9ea276eb2327a7216f5f"
   };
   // Initialize Firebase
   firebase.initializeApp(firebaseConfig);
